--- a/docs/forest.adoc
+++ b/docs/forest.adoc
@@ -19,7 +19,8 @@ missing in most other tree-processing libraries.
 
 == Quick Start
 
-You can watch a video of the :link:https://youtu.be/RtavTnRr0oM[tupelo.forest Lightning Talk] from the 2017 Clojure Conj.
+You can link:https://youtu.be/RtavTnRr0oM[watch a video of the Lightning Talk] about tupelo.forest from
+the 2017 Clojure/Conj.
 
 Create a tree using Hiccup:
 
