--- a/README.adoc
+++ b/README.adoc
@@ -1289,13 +1289,24 @@ Copyright © 2015-2017  Alan Thompson
 
 Distributed under the link:https://www.eclipse.org/legal/epl-v10.html[Eclipse Public License], the same as Clojure.
 
+== Development Environment
+
 Developed using link:https://www.jetbrains.com/idea/[*IntelliJ IDEA*] 
 with the link:https://cursive-ide.com/[*Cursive* Clojure plugin].
 
 image:resources/intellij-idea-logo-400.png[IntelliJ,200,200]
+
 image:resources/cursive-logo-300.png[Cursive]
 
-==== ToDo List (#todo)
+YourKit supports open source projects with its full-featured Java Profiler.
+YourKit, LLC is the creator of
+link:https://www.yourkit.com/java/profiler/[YourKit Java Profiler]
+and link:https://www.yourkit.com/.net/profiler/[YourKit .NET Profiler],
+innovative and intelligent tools for profiling Java and .NET applications.
+
+image:https://www.yourkit.com/images/yklogo.png[YourKit,400,400]
+
+== ToDo List (#todo)
 
   types
   schema (& schema-datomic)
