--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ Leiningen coordinates:
 
 image:http://clojars.org/tupelo/latest-version.svg[ http://clojars.org/tupelo ]
 
-image:https://img.shields.io/clojars/v/tupelo.svg[ http://clojars.org/tupelo ]
+image:https://img.shields.io/clojars/v/tupelo.svg[link="http://clojars.org/tupelo"]
 
 === The Tupelo API Docs link:http://cloojure.github.io/doc/tupelo/[are posted on GitHub Pages]
 
