--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,7 @@
 
 = Making Clojure Even Sweeter
 
-Leiningen coordinates:
-
-image:http://clojars.org/tupelo/latest-version.svg[ http://clojars.org/tupelo ]
-
+Current Version: 
 image:https://img.shields.io/clojars/v/tupelo.svg[link="http://clojars.org/tupelo"]
 
 === The Tupelo API Docs link:http://cloojure.github.io/doc/tupelo/[are posted on GitHub Pages]
