--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 = Making Clojure Even Sweeter
 
 image:https://img.shields.io/clojars/v/tupelo.svg[link="http://clojars.org/tupelo"]
-nbsp; nbsp; nbsp; Current Version
+&nbsp; &nbsp; &nbsp; Current Version
 
 === The Tupelo API Docs link:http://cloojure.github.io/doc/tupelo/[are posted on GitHub Pages]
 
