--- a/README.adoc
+++ b/README.adoc
@@ -7,6 +7,9 @@
 
 image:https://img.shields.io/clojars/v/tupelo.svg[link="http://clojars.org/tupelo"]
 
+# This will show a badge with the latest released version
+image:https://cljdoc.org/badge/tupelo/tupelo
+
 == Tupelo Overview
 
 Have you ever wanted to do something simple but clojure.core doesn't support it? Or, maybe you are
