--- a/README.adoc
+++ b/README.adoc
@@ -7,8 +7,7 @@
 
 image:https://img.shields.io/clojars/v/tupelo.svg[link="http://clojars.org/tupelo"]
 
-# This will show a badge with the latest released version
-image:https://cljdoc.org/badge/tupelo/tupelo
+image:[link=https://cljdoc.org/badge/tupelo/tupelo]
 
 == Tupelo Overview
 
