--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,7 @@
 
 image:https://img.shields.io/clojars/v/tupelo.svg[link="http://clojars.org/tupelo"]
 
-image:[link=https://cljdoc.org/badge/tupelo/tupelo]
+image:[link="https://cljdoc.org/badge/tupelo/tupelo"]
 
 == Tupelo Overview
 
