--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,8 @@
 
 image:https://img.shields.io/clojars/v/tupelo.svg[link="http://clojars.org/tupelo"]
 
-image:[link="https://cljdoc.org/badge/tupelo/tupelo"]
+image:https://cljdoc.org/badge/tupelo/tupelo[link="https://cljdoc.org/d/$group-id/$artifact-id/CURRENT"]
+
 
 == Tupelo Overview
 
