--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-unlazy => unlazy-sorted
-  + walk-maps->sorted
+unlazy => unlazy-sorted + plain version
+  walk-maps->sorted => use sorted-map-generic, sorted-set-generic (both!)
 
 walk-with-parents
   => walk-data
