--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+change org.joda.time/ReadableInstant => org.joda.time/Instant
+  add to tagstr
+  replace tupelo.java-time/stringify-times with tagstr encode/decode
+
 walk-with-parents
   => walk-data
     combine with submatch? for power
